--- a/auto-blindtest-ui/package.json
+++ b/auto-blindtest-ui/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "^17.3.8",
     "angular-oauth2-oidc": "^17.0.2",
     "express": "^4.18.2",
+    "primeflex": "^3.3.1",
+    "primeng": "^17.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
